--- a/src/app/right-side/right-side.component.scss
+++ b/src/app/right-side/right-side.component.scss
@@ -233,14 +233,14 @@
     
     .delete-button {
         position: relative;
-        left: 1.7rem;
+        left: 2.4rem;
         opacity: 0.7;
         width: 1rem;
     }
     
     .strike {
         cursor: pointer;
-        color: #3e69e4;
+        color: $color;
         width: 1.3rem;
         height: 1.1rem;
         margin-left: 0.8rem;
@@ -249,7 +249,7 @@
     
     .strike-image {
         cursor: pointer;
-        color: #3e69e4;
+        color: $color;
         width: 1.3rem;
         height: 1.1rem;
         margin-left: 0.8rem;
